remove global scroll offset to prevent jumpy behavior while tabbing

--- a/assets/styles/base/base.css
+++ b/assets/styles/base/base.css
@@ -7,7 +7,6 @@
 
 html {
 	scroll-behavior: smooth;
-	scroll-padding-top: var(--layout-scroll-header-lexcion-controls-offset);
 }
 
 body {
